--- a/src/styles/components/site-header.styl
+++ b/src/styles/components/site-header.styl
@@ -1,19 +1,23 @@
 .site-header
-  color #fff
-  background #0066bb url(../images/zooniverse-icon-web-white-small.png) no-repeat right 
-  background-size contain
+  flex: 0 0 auto
+  color: $secondary-colour
+  background: $primary-colour url("../images/zooniverse-icon-web-white-small.png") no-repeat right 
+  background-size: contain
 
   .title
-    display inline-block
-    padding 0 20px
+    display: inline-block
+    padding: 0 20px
 
   .link
-    display inline-block
-    margin 10px
-    padding 10px
-    color #fff
-    text-decoration none
-    border-radius 3px
-    &.active,
+    display: inline-block
+    margin: 10px
+    padding: 10px
+    color: $secondary-colour
+    text-decoration: none
+    border-radius: 3px
+    
+    &.active
     &:hover
-      background-color #0085F3
+      color: $primary-colour
+      background: $secondary-colour
+      
