Basic species selector

--- a/src/styles/components/maps.styl
+++ b/src/styles/components/maps.styl
@@ -19,13 +19,20 @@
     padding: 1em
     display: flex
     flex-direction: row
+    flex-wrap: wrap
+    justify-content: center
+    max-height: 20vh
+    overflow: auto
     
     label
       cursor: pointer
       flex: 0 0 auto
-      padding: 0.5em
-      width: 25%
-      display: block
+      padding: 0.25em
+      margin: 0.25em
+      border-radius: 0.5em
+      border: 1px solid $secondary-colour
+      width: 100%;
+      max-width: 12em;
 
 .fix-map-height
   > div
