--- a/src/styles/components/site-header.styl
+++ b/src/styles/components/site-header.styl
@@ -6,7 +6,8 @@
 
   .title
     display: inline-block
-    padding: 0 20px
+    padding: 0 0.5em
+    font-size: 1.2em
 
   .link
     display: inline-block
