Mild style improvements

--- a/src/styles/components/maps.styl
+++ b/src/styles/components/maps.styl
@@ -15,6 +15,9 @@
     margin: 0 auto
     width: 100%
     
+    > div
+      border-bottom: 1px solid $tertiary-colour
+    
     .map-controls-summary
       background: $primary-colour
       color: $secondary-colour
